--- a/ui/android/app/src/main/res/values/strings.xml
+++ b/ui/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
 <resources>
-    <string name="app_name">Tab Navigation Template</string>
+    <string name="app_name">codar</string>
+    <string name="title_contact_events">Contact Events</string>
+    <string name="title_my_profile">My Profile</string>
+    <string name="title_notifications">Notifications</string>
+    <string name="title_are_you_sick_question">Are you sick? 🤒</string>
+    <string name="title_yes">Yes</string>
+    <string name="title_no">No</string>
+    <string name="title_clear">Clear</string>
+    <string name="title_start_logging">Start</string>
+    <string name="title_stop_logging">Stop</string>
+    <string name="preference_file_key">org.covidwatch.android.PREFERENCE_FILE_KEY</string>
+    <string name="preference_is_current_user_sick">preference_is_current_user_sick</string>
+    <string name="preference_is_contact_event_logging_enabled">preference_is_contact_event_logging_enabled</string>
+    <string name="channel_name">Channel Name</string>
+    <string name="channel_description">Channel Description</string>
+    <string name="notification_current_user_was_exposed">Uh oh, you have been exposed</string>
 </resources>
